# irg

./: .gitignore  .gitmodules  Makefile  flake.nix  meson.build
includes/: camera.h  core.h  gui.h  isometric.h  world.h
src/: camera.c  core.c  gui.c  isometric.c  main.c  world.c
subprojects/: raylib.wrap
